--- a/aula11/exe011.html
+++ b/aula11/exe011.html
@@ -11,7 +11,7 @@
     País onde vive: <input type="text" name="residencia" id="residencia">
     <input type="button" value="ir" onclick="verificar()">
     <div id="resultado">
-
+        Aqui vai aparecer o resultado...
     </div>
 
     <script>
