--- a/aula12ex/exe014/modelo.html
+++ b/aula12ex/exe014/modelo.html
@@ -7,7 +7,7 @@
     <title>Hora do Dia</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="carregar()">
+<body onload="carregar()"> <!--quando carregar a pagina automaticamente o evento  onload ja vai puxar a função do js-->
     <header>
         <h1>Hora do Dia</h1>
     </header>
